Update Dropwizard to 0.8.0

--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,6 @@
         </dependency>
     </dependencies>
     <properties>
-        <dropwizard.version>0.7.1-SNAPSHOT</dropwizard.version>
+        <dropwizard.version>0.8.0</dropwizard.version>
     </properties>
 </project>
